# Image-Recognition-AI-App-Development-Udemy

./: .gitignore  README.md  pyproject.toml
src/: animal_cnn augmented.py  animal_cnn.py  download.py  gen_data augmented.py  gen_data.py  predict.py  predict_file.py
